@@ -7,6 +7,8 @@
 - Added lsp::lsp_malloc template function for allocating arrays.
 - Added lsp::StaticInitializer, lsp::StaticFinalizer and lsp::StaticManager classes for static data.
 - Added placeholders for log functions when they are not used.
+- Fixed typo in version function definition.
+- Moved some function implementation from types.h header to types.cpp. 
 
 === 1.0.14 ===
 * Added lsp_xlimit function to limit ranges for both min < max and min >= max ranges.
